--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                     <input type="number" name="weight" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500">
                 </div>
                 <div>
-                    <label class="block mb-1 font-medium">Height (m)</label>
+                    <label class="block mb-1 font-medium">Height (ft)</label>
                     <input type="number" step="0.01" name="height" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-green-500">
                 </div>
                 <div>
